--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -30,8 +30,10 @@
     <color name="accent.Light">#03a9f4</color>
     <color name="tabsScrollColor.Light">#4db6ac</color>
     <color name="textColorPrimary.Light">#ffffff</color>
-    <color name="textColor.Light">#212121</color>
+    <color name="textColor.Light">#181818</color>
     <color name="textColorSecondary.Light">#616161</color>
+    <color name="textColorPrimaryInverse.Light">#212121</color>
+    <color name="textColorSecondaryInverse.Light">#eeeeee</color>
     <!-- Dark -->
     <color name="actionBarColor.Dark">#8003a9f4</color>
     <color name="primary.Dark">#03a9f4</color>
@@ -41,5 +43,7 @@
     <color name="textColorPrimary.Dark">#ffffff</color>
     <color name="textColor.Dark">#fafafa</color>
     <color name="textColorSecondary.Dark">#eeeeee</color>
+    <color name="textColorPrimaryInverse.Dark">#212121</color>
+    <color name="textColorSecondaryInverse.Dark">#616161</color>
     <!--indigo from http://www.google.co.uk/design/spec/style/color.html#color-color-palette -->
 </resources>
