--- a/src/main/res/values-ru/arrays.xml
+++ b/src/main/res/values-ru/arrays.xml
@@ -64,4 +64,8 @@
         <item>2 экрана (рекомендуется)</item>
         <item>3 экрана</item>
     </string-array>
+    <string-array name="theme">
+        <item>Темная</item>
+        <item>Светлая</item>
+    </string-array>
 </resources>
