--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -119,4 +119,12 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+    <string-array name="theme">
+        <item>Dark</item>
+        <item>Light</item>
+    </string-array>
+    <string-array name="theme_val" translatable="false">
+        <item>dark</item>
+        <item>light</item>
+    </string-array>
 </resources>
