--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -23,23 +23,19 @@
   -->
 
 <resources>
+    <!-- Common -->
+    <color name="actionBarColor">#8003a9f4</color>
+    <color name="primary">#03a9f4</color>
+    <color name="primary_dark">#01579b</color>
+    <color name="accent">#03a9f4</color>
+    <color name="tabsScrollColor">#4db6ac</color>
     <!-- Light -->
-    <color name="actionBarColor.Light">#8003a9f4</color>
-    <color name="primary.Light">#03a9f4</color>
-    <color name="primary_dark.Light">#01579b</color>
-    <color name="accent.Light">#03a9f4</color>
-    <color name="tabsScrollColor.Light">#4db6ac</color>
     <color name="textColorPrimary.Light">#181818</color>
     <color name="textColor.Light">#242424</color>
     <color name="textColorSecondary.Light">#616161</color>
     <color name="textColorPrimaryInverse.Light">#ffffffff</color>
     <color name="textColorSecondaryInverse.Light">#eeeeee</color>
     <!-- Dark -->
-    <color name="actionBarColor.Dark">#8003a9f4</color>
-    <color name="primary.Dark">#03a9f4</color>
-    <color name="primary_dark.Dark">#01579b</color>
-    <color name="accent.Dark">#03a9f4</color>
-    <color name="tabsScrollColor.Dark">#4db6ac</color>
     <color name="textColorPrimary.Dark">#ffffff</color>
     <color name="textColor.Dark">#fafafa</color>
     <color name="textColorSecondary.Dark">#eeeeee</color>
