--- a/src/main/res/layout/activity_standard_attributes.xml
+++ b/src/main/res/layout/activity_standard_attributes.xml
@@ -132,8 +132,9 @@
             android:id="@+id/controls_list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            />
+            android:orientation="vertical">
+
+        </LinearLayout>
 
     </ScrollView>
 
