--- a/src/main/res/layout/activity_vectorlayer_settings.xml
+++ b/src/main/res/layout/activity_vectorlayer_settings.xml
@@ -33,6 +33,15 @@
         layout="@layout/actionbar"
         />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -120,5 +129,8 @@
 
     <include
         layout="@layout/row_color"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
