--- a/src/main/res/layout/activity_localrasterlayer_settings.xml
+++ b/src/main/res/layout/activity_localrasterlayer_settings.xml
@@ -33,142 +33,171 @@
         layout="@layout/actionbar"
         />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/mainSettings"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_margin="5dp"
-        />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/layer_name"
-        android:id="@+id/layer_name_label"
-        android:layout_margin="5dp"
-        />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/layer_name"
-        android:layout_margin="5dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/zoom_levels_to_show"
-        android:id="@+id/textView"
-        android:layout_margin="5dp"
-        />
-
-    <com.edmodo.rangebar.RangeBar
-        android:id="@+id/rangebar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        custom:tickCount="25"
-        />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/leftIndexValue"
-            android:gravity="start|left"
-            android:textAlignment="textStart"
-            android:layout_weight="1"/>
+            android:text="@string/mainSettings"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_margin="5dp"
+            />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/rightIndexValue"
-            android:gravity="right|end"
-            android:textAlignment="textEnd"
-            android:layout_weight="1"/>
-    </LinearLayout>
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/layer_name"
+            android:id="@+id/layer_name_label"
+            android:layout_margin="5dp"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/layer_name"
+            android:layout_margin="5dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/zoom_levels_to_show"
+            android:id="@+id/textView"
+            android:layout_margin="5dp"
+            />
+
+        <com.edmodo.rangebar.RangeBar
+            android:id="@+id/rangebar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            custom:tickCount="25"
+            />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/leftIndexValue"
+                android:gravity="start|left"
+                android:textAlignment="textStart"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/rightIndexValue"
+                android:gravity="right|end"
+                android:textAlignment="textEnd"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tms_layer_cache_size"
-        android:id="@+id/tms_layer_cache_size_label"
-        android:layout_margin="5dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/tms_layer_cache_size"
+            android:id="@+id/tms_layer_cache_size_label"
+            android:layout_margin="5dp"
+            />
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:entries="@array/tms_tile_cache_size"
-        android:entryValues="@array/tms_tile_cache_size_val"
-        />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:entries="@array/tms_tile_cache_size"
+            android:entryValues="@array/tms_tile_cache_size_val"
+            />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/displaySettings"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_margin="5dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/displaySettings"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_margin="5dp"
+            />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/contrast"
-        android:id="@+id/contrast_seek"
-        android:layout_margin="5dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/alpha"
+            android:id="@+id/alpha_seek"
+            android:layout_margin="5dp"
+            />
 
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/contrastSeekBar"
-        android:max="100"
-        android:layout_margin="5dp"
-        />
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/alphaSeekBar"
+            android:max="255"
+            android:layout_margin="5dp"
+            />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/brightness"
-        android:id="@+id/brightness_seek"
-        android:layout_margin="5dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/contrast"
+            android:id="@+id/contrast_seek"
+            android:layout_margin="5dp"
+            />
 
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/brightnessSeekBar"
-        android:max="510"
-        android:layout_margin="5dp"
-        />
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/contrastSeekBar"
+            android:max="100"
+            android:layout_margin="5dp"
+            />
 
-    <android.support.v7.widget.SwitchCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/make_grayscale"
-        android:id="@+id/make_grayscale"
-        android:layout_margin="5dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/brightness"
+            android:id="@+id/brightness_seek"
+            android:layout_margin="5dp"
+            />
 
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/brightnessSeekBar"
+            android:max="510"
+            android:layout_margin="5dp"
+            />
+
+        <android.support.v7.widget.SwitchCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/make_grayscale"
+            android:id="@+id/make_grayscale"
+            android:layout_margin="5dp"
+            />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
