--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -36,6 +36,8 @@
     <attr name="ic_action_content_select_all" format="reference"/>
     <attr name="ic_menu_moreoverflow_inverse" format="reference"/>
     <attr name="ic_menu_moreoverflow" format="reference"/>
+    <attr name="ic_track_inverse" format="reference"/>
+    <attr name="ic_track" format="reference"/>
 
     <style name="Theme.NextGIS.AppCompat.Light"
            parent="Theme.AppCompat.Light.NoActionBar">
@@ -68,6 +70,8 @@
         <item name="ic_action_content_select_all">@drawable/ic_action_content_select_all_light</item>
         <item name="ic_menu_moreoverflow_inverse">@drawable/ic_menu_moreoverflow_dark</item>
         <item name="ic_menu_moreoverflow">@drawable/ic_menu_moreoverflow_light</item>
+        <item name="ic_track">@drawable/ic_track_light</item>
+        <item name="ic_track_inverse">@drawable/ic_track_dark</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_light</item>
     </style>
@@ -103,6 +107,8 @@
         <item name="ic_action_content_select_all">@drawable/ic_action_content_select_all_dark</item>
         <item name="ic_menu_moreoverflow_inverse">@drawable/ic_menu_moreoverflow_light</item>
         <item name="ic_menu_moreoverflow">@drawable/ic_menu_moreoverflow_dark</item>
+        <item name="ic_track">@drawable/ic_track_dark</item>
+        <item name="ic_track_inverse">@drawable/ic_track_light</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_dark</item>
     </style>
