--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -38,6 +38,7 @@
     <attr name="ic_menu_moreoverflow" format="reference"/>
     <attr name="ic_track_inverse" format="reference"/>
     <attr name="ic_track" format="reference"/>
+    <attr name="ic_clear" format="reference"/>
 
     <style name="Theme.NextGIS.AppCompat.Light"
            parent="Theme.AppCompat.Light.NoActionBar">
@@ -72,6 +73,7 @@
         <item name="ic_menu_moreoverflow">@drawable/ic_menu_moreoverflow_light</item>
         <item name="ic_track">@drawable/ic_track_light</item>
         <item name="ic_track_inverse">@drawable/ic_track_dark</item>
+        <item name="ic_clear">@drawable/ic_clear_light</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_light</item>
     </style>
@@ -109,6 +111,7 @@
         <item name="ic_menu_moreoverflow">@drawable/ic_menu_moreoverflow_dark</item>
         <item name="ic_track">@drawable/ic_track_dark</item>
         <item name="ic_track_inverse">@drawable/ic_track_light</item>
+        <item name="ic_clear">@drawable/ic_clear_dark</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_dark</item>
     </style>
