--- a/src/main/res/layout/activity_standard_attributes.xml
+++ b/src/main/res/layout/activity_standard_attributes.xml
@@ -32,95 +32,8 @@
     <include
         layout="@layout/actionbar"/>
 
-    <LinearLayout
-        android:id="@+id/location_panel"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            >
-
-            <TableLayout
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:stretchColumns="0,1,2"
-                android:layout_weight="1"
-                >
-
-                <TableRow
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    >
-
-                    <TextView
-                        android:id="@+id/latitude_view"
-                        android:layout_gravity="start"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        />
-
-                    <TextView
-                        android:id="@+id/longitude_view"
-                        android:layout_gravity="start"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    >
-
-                    <TextView
-                        android:id="@+id/altitude_view"
-                        android:layout_gravity="start"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        />
-
-                    <TextView
-                        android:id="@+id/accuracy_view"
-                        android:layout_gravity="start"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        />
-
-                </TableRow>
-
-            </TableLayout>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/refresh"
-                android:background="@drawable/ic_action_refresh"
-                android:layout_margin="5dp"
-                />
-
-
-        </LinearLayout>
-
-        <View
-            android:layout_height="1dp"
-            android:layout_width="wrap_content"
-            android:background="@android:color/darker_gray"
-            android:layout_margin="2dp"
-            />
-
-    </LinearLayout>
+    <include
+        layout="@layout/fragment_location_panel"/>
 
     <ScrollView
         android:layout_width="fill_parent"
