--- a/src/main/res/layout/fragment_location_panel.xml
+++ b/src/main/res/layout/fragment_location_panel.xml
@@ -93,7 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/refresh"
-            android:background="@drawable/ic_action_refresh"
+            android:background="?attr/ic_action_refresh"
             android:layout_margin="5dp"
             android:contentDescription="@string/update_coordinates"/>
 
@@ -103,7 +103,7 @@
     <View
         android:layout_height="1dp"
         android:layout_width="wrap_content"
-        android:background="@android:color/darker_gray"
+        android:background="?android:attr/textColorSecondary"
         android:layout_margin="2dp"
         />
 
