--- a/src/main/res/layout/fragment_location_panel.xml
+++ b/src/main/res/layout/fragment_location_panel.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Project: Forest violations
   ~ Purpose: Mobile application for registering facts of the forest violations.
   ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
+  ~ Author:  Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
   ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
   ~
@@ -21,90 +21,102 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/location_panel">
+    android:id="@+id/location_panel"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
         android:layout_margin="5dp"
-        >
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <TableLayout
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:stretchColumns="0,1,2"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            >
+            android:stretchColumns="0,1,2">
 
             <TableRow
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/latitude_view"
-                    android:layout_gravity="start"
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <TextView
                     android:id="@+id/longitude_view"
-                    android:layout_gravity="start"
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </TableRow>
 
             <TableRow
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/altitude_view"
-                    android:layout_gravity="start"
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <TextView
                     android:id="@+id/accuracy_view"
-                    android:layout_gravity="start"
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </TableRow>
 
         </TableLayout>
 
         <ImageButton
+            android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/refresh"
-            android:background="?attr/ic_action_refresh"
             android:layout_margin="5dp"
-            android:contentDescription="@string/update_coordinates"/>
-
+            android:background="?attr/ic_action_refresh"
+            android:contentDescription="@string/update_coordinates" />
 
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="center_vertical">
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/accurate_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="@string/accurate_location" />
+
+        <android.support.v7.widget.AppCompatSpinner
+            android:id="@+id/accurate_ce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:entries="@array/accurate_ce"
+            android:entryValues="@array/accurate_ce" />
+    </FrameLayout>
+
     <View
-        android:layout_height="1dp"
         android:layout_width="wrap_content"
-        android:background="?android:attr/textColorSecondary"
+        android:layout_height="1dp"
         android:layout_margin="2dp"
-        />
+        android:background="?android:attr/textColorSecondary" />
 
 </LinearLayout>
