--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -40,6 +40,8 @@
     <attr name="ic_track" format="reference"/>
     <attr name="ic_clear" format="reference"/>
     <attr name="ic_action_refresh" format="reference"/>
+    <attr name="ic_apply" format="reference"/>
+    <attr name="ic_cancel" format="reference"/>
 
     <style name="Theme.NextGIS.AppCompat.Light"
            parent="Theme.AppCompat.Light.NoActionBar">
@@ -76,6 +78,8 @@
         <item name="ic_track_inverse">@drawable/ic_track_dark</item>
         <item name="ic_clear">@drawable/ic_clear_light</item>
         <item name="ic_action_refresh">@drawable/ic_action_refresh_light</item>
+        <item name="ic_apply">@drawable/ic_action_apply_light</item>
+        <item name="ic_cancel">@drawable/ic_action_cancel_light</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_light</item>
     </style>
@@ -115,6 +119,8 @@
         <item name="ic_track_inverse">@drawable/ic_track_light</item>
         <item name="ic_clear">@drawable/ic_clear_dark</item>
         <item name="ic_action_refresh">@drawable/ic_action_refresh_dark</item>
+        <item name="ic_apply">@drawable/ic_action_apply_dark</item>
+        <item name="ic_cancel">@drawable/ic_action_cancel_dark</item>
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_dark</item>
     </style>
